--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "node_server.js",
   "scripts": {
-    "start":"node node_server_express.js"
+    "start":"nodemon node_server_express.js"
   },
-  "dependencies":{
-
-    "express": "~4.16.0"
-
+  "dependencies":{ 
+    "express": "~4.16.0",
+    "nodemon":"1.18.9" 
   },
   "author": "",
   "license": "ISC"
